--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroui/theme": "^2.4.19",
     "@react-aria/i18n": "^3.12.11",
     "framer-motion": "^12.23.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
